--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Weather | APP</title>
 </head>
 
 <body>
     <div class="container">
         <div class="card2">
             <div class="intarnal2">
-                <input type="search" placeholder="Enter you city    ">
+                <input id="city" type="search" placeholder="Enter you city">
+                <button id="btn"><i class="fa-solid fa-search"></i>submit</button>
             </div>
 
         </div>
         <div class="card">
             <div class="intarnal">
-                <h1>New Delhi</h1>
+               <h1> <i class="fa-solid fa-location-dot"></i> <span id="cityName"></span></h1>
                 <span>Sunny <i class="fa-solid fa-sun"></i></span>
-                <h1>15<span>&#176;</span>C</h1>
+                <div class="temprature">
+                    <h1 id="temp"></h1><h1>&#176;C</h1>
+                </div>
                 <div class="addtional">
-                    <span><i class="fa-solid fa-wind"></i> 1008</span> |
-                    <span><i class="fa-solid fa-cloud"></i> 69°C</span>
+                    Wind : <span id="wind_speed"><i class="fa-solid fa-wind"></i> </span> |
+                    Hmidity : <span id="humidity"><i class="fa-solid fa-cloud"></i> °C</span>
                 </div>
                 <hr>
                 <h5>Next 4 days focast.</h5>
