--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <h1 id="temp"></h1><h1>&#176;C</h1>
                 </div>
                 <div class="addtional">
-                    Wind : <span id="wind_speed"><i class="fa-solid fa-wind"></i> </span> |
-                    Hmidity : <span id="humidity"><i class="fa-solid fa-cloud"></i> °C</span>
+                    <i class="fa-solid fa-wind"></i> : <span id="wind_speed"></span> kmph |
+                    <i class="fa-solid fa-droplet"></i> : <span id="humidity"></span>%
                 </div>
                 <hr>
                 <h5>Next 4 days focast.</h5>
