--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                <h1> <i class="fa-solid fa-location-dot"></i> <span id="cityName"></span></h1>
                 <span>Sunny <i class="fa-solid fa-sun"></i></span>
                 <div class="temprature">
+                    <img src="./load.gif" id="loading" style="display: none;">
                     <h1 id="temp"></h1><h1>&#176;C</h1>
                 </div>
                 <div class="addtional">
